--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
  </head>
 
  <body> 
-    <header class="cabecalho">
-    <span class="cabecalho__menu-hamburguer"></span>
-
+      <header class="cabecalho">
+       <div class="container">
+         <input type="checkbox" id="menu" class="container__botao">
+         <label for="menu"></label>
+       <span class="cabecalho__menu-hamburguer container__image"></span>
+      </label>
+      <ul class="lista-menu">
+       <l1 class="lista-menu__titulo">Categorias</l1>
+       <1 class="lista-menu__item"> <a href="#" class="lista-menu__link"></a></1>
+      </ul>
+       <img src="Logo.svg" alt="logo da alurabooks" class="container__image">
+       </div>
+     <div class="container">
+     <a href="#"><img src="Favoritos.svg" alt="meus favorios" class="container__image"></a>
+     <a href="a"><img src="Compras.svg" alt="carrinhos de compras" class="container__image"></a>
+     <a href="a"><img src="Usuário.svg" alt="meu perfil" class="container__image"></a>
+    </div>
     </header>
  <body>
    
