--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
        <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width,initial-scale=1.0">
-      <title>O CLUBE DA FÈ</title>
+      <title>O CLUBE DA FE</title>
        <link rel="stylesheet" href="reset.css">
        <link rel="stylesheet" href="style.css">
  </head>
@@ -17,8 +17,8 @@
        <span class="cabecalho__menu-hamburguer container__image"></span>
       </label>
       <ul class="lista-menu">
-       <l1 class="lista-menu__titulo">Categorias</l1>
-       <1 class="lista-menu__item"> <a href="#" class="lista-menu__link"></a></1>
+       <li class="lista-menu__titulo">categorias</li>
+       <li class="lista-menu__item"> <a href="#" class="lista-menu__link"></a></1>
       </ul>
        <img src="Logo.svg" alt="logo da alurabooks" class="container__image">
        </div>
